2014-01-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_run_find_service):
	Addionally to the oldstyle kb, get a newstyle handle of the kb.
	Replace the while statement using the oldstyle kb to count
	the number of open ports with new style kb.
	This also removes a count bug that would deliver one too less
	in case the last kb element contains a port.

2014-01-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Isolating old style kb function to the only place where it still used.

	* misc/kb.c (plug_get_oldstyle_kb): Removed.

	* misc/kb.h: Removed proto accordingly.

	* nasl/nasl_builtin_find_service.c (HASH_MAX, plug_get_oldstyle_kb):
	New. Copy from above place, with some comment and using kb_t typedef.

2014-01-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/nvticache.c (nvticache_get): Also return NULL if the file could
	be read, but is empty. This fixes a segfault when an empty nvti file
	is encountered when reading the cache. Patch suggested by Sebastien
	Aucouturier.

2014-01-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/kb.h: Add a typedef kb_t for struct kb_item **.

	* misc/plugutils.c, misc/network.c, misc/plugutils.h, misc/www_funcs.c,
	nasl/nasl_http.c, nasl/nasl_builtin_nmap.c, nasl/nasl_scanner_glue.c,
	nasl/nasl_ssh.c: Use kb_t.

2014-01-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/plugutils.c, nasl/nasl.c, nasl/nasl_scanner_glue.c:
	Formatting fixes.

2014-01-09  Benoit Allard  <benoit.allard@greenbone.net>

	Post release version bump.

        * CMakeLists.txt: Set version to 7.0+beta5.

2014-01-09  Benoit Allard  <benoit.allard@greenbone.net>

	* CHANGES: Set date for 7.0+beta4 release

2014-01-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Fix a regression reported by Henri Doreau with authenticated scans.

	* misc/network.c (nsend): Revert parts of revision 18495 caused by utf-8
	conversion